42.alpha
=========
Disk Usage Analyzer 42.alpha comes with a port to GTK4
and libadwaita. In addition, Zander Brown adjusted our
styling so that numbers in cells are aligned, keeping
the UI from shifting during scanning.

* Translation updates:
 - Basque
 - Chinese (China)
 - Croatian
 - Friulian
 - Galician
 - Hebrew
 - Hungarian
 - Indonesian
 - Occitan (post 1500)
 - Persian
 - Portuguese
 - Portuguese (Brazil)
 - Spanish
 - Ukrainian

41.0
=======

Disk Usage Analyzer 41 comes with support for building the GUI on windows,
contributed Gabriel Rauter.

* Translation updates:
 - Bulgarian
 - Chinese (Taiwan)
 - Croatian
 - Czech
 - Danish
 - Dutch
 - English (United Kingdom)
 - Greek, Modern (1453-)
 - Hebrew
 - Nepali
 - Occitan (post 1500)
 - Russian
 - Slovak
 - Western Frisian

40.0
=======

Disk Usage Analyzer's visuals have been updated to match the GNOME 40 visual style.

* Translation updates:
 - Basque
 - Bokmål, Norwegian
 - Catalan
 - Chinese (Taiwan)
 - Croation
 - Czech
 - Danish
 - Dutch
 - Esperanto
 - Finnish
 - French
 - Friulian
 - Galician
 - German
 - Hebrew
 - Hungarian
 - Indonesian
 - Italian
 - Japanese
 - Kazakh
 - Korean
 - Kurdish, Central
 - Latvian
 - Lithuanian
 - Panjabi
 - Persian
 - Polish
 - Portuguese
 - Portuguese (Brazil)
 - Romanian
 - Serbian
 - Slovenian
 - Spanish
 - Swedish
 - Turkish
 - Ukrainian
 - Vietnamese

3.38.0
======

  * Updated translations (cs, da, de, el, en_GB, fa, fi, fr, gl, hr, hu, id,
    it, ja, ko, lv, nl, pl, pt, pt_BR, sk, sl, sr)
  * Updated documentation translations (ca, de)

3.37.90
=======

  * Added UI to change excluded locations
  * Style fixes
  * Updated translations (ca, de, es, eu, fur, kk, lt, ro, sv, tr, uk, zh_CN)

3.35.2
======

  * Added compatibility with MinGW
  * Improved treeview navigation in order to avoid horizontal scrolling
  * Updated color palette of the charts
  * Added a command line option to cross filesystem boundaries