@@ -39,6 +39,19 @@
   <translation type="gettext">baobab</translation>
 
   <releases>
+    <release version="42.beta" date="2022-02-15">
+      <description>
+        <p>Disk Usage Analyzer 42.alpha comes with the following translation updates:</p>
+        <ul>
+          <li>Catalan</li>
+          <li>Czech</li>
+          <li>Icelandic</li>
+          <li>Japanese</li>
+          <li>Russian</li>
+          <li>Slovenian</li>
+        </ul>
+      </description>
+    </release>
     <release version="42.alpha" date="2022-01-11">
       <description>
         <p>Disk Usage Analyzer 42.alpha comes with a port to GTK4 and libadwaita. In addition, Zander Brown adjusted our styling so that numbers in cells are aligned, keeping the UI from shifting during scanning.</p>
