@@ -1,3 +1,13 @@
+42.beta
+=========
+* Translation updates:
+ - Catalan
+ - Czech
+ - Icelandic
+ - Japanese
+ - Russian
+ - Slovenian
+
 42.alpha
 =========
 Disk Usage Analyzer 42.alpha comes with a port to GTK4
